# vesc_data_analysis

./: README.md  UPDATELOG.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: alpha.yml  dev.yml  release.yml  updater.yml
scripts/: portable-fixed-webview2.mjs  portable.mjs  updater.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/slcan/: Cargo.toml
src-tauri/slcan/examples/: macos_example.rs
src-tauri/slcan/src/: lib.rs
src-tauri/src/: cmds.rs  lib.rs  main.rs  process_csv.rs
src-tauri/src/motor/: apis.rs  mod.rs
src/api/: cmds.js  utils.js
src/components/: AppUpdateDialog.vue  CanConfig.vue  CanGetvescData.vue  CanInterface.vue  CanMessageList.vue  CanSender.vue  CanStatistics.vue  MarkDownDisplay.vue  PolyScatterChart.vue  ScatterChart.vue  TitleBar.vue
src/router/: index.js
src/views/: CheckGoodnessOfFit.vue  DataProcess.vue  Home.vue  Main.vue
