[package]
name = "vesc_data_analysis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vesc_data_analysis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-dialog = "2.2.0"
csv = "1.3.1"
anyhow = "1.0.94"
once_cell = "1.20.2"
tauri-plugin-store = "2.2.0"
# slcan = "0.1.3"
tokio = { version = "1.42.0", features = ["full"] }
serialport = "4.6.1"
slcan = { path = "./slcan" }
bytes = "1.9.0"
crc = "3.2.1"
chrono = "0.4.39"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
